# bg-memory

./: .gitignore  CMakeLists.txt  README.md  build.ps1  build.sh  clang.sh  gcc.sh  nix-build.dockerfile  win-build.dockerfile
bgmemory/: CMakeLists.txt
bgmemory/include/bgmemory/: DefaultDeleter.hxx  memoryfunctions.hxx
bgmemory/include/bgmemory/pointers/: Deleter.hxx  MutableSharedPtr.hxx  MutableUniquePtr.hxx  MutableWeakPtr.hxx  SharedPointerPayload.hxx  SharedPtrMutator.hxx
bgmemory/include/bgmemory/pointers/inner/: SharedPointerPayload.hxx
bgmemory/src/: bulletpool.cxx  memoryfunctions.cxx
bgmemory/test/: CMakeLists.txt
bgmemory/test/src/: memoryfunctions.cxx
bgmemory/test/src/pointers/: MutableSharedPtr.cxx  MutableUniquePtr.cxx  MutableWeakPtr.cxx  SharedPtrMutator.cxx  TestHelpers.cxx  TestHelpers.hxx
bgmemorypools/: CMakeLists.txt
bgmemorypools/include/bgmemorypools/: assert.hxx  bulletpool.hxx
bgmemorypools/src/: bulletpool.cxx  memoryfunctions.cxx
bgmemorypools/test/: CMakeLists.txt
bgmemorypools/test/src/: example.cxx  memoryfunctions.cxx
scripts/: nix-build.sh  win-build.sh
