cmake_minimum_required (VERSION 3.10 FATAL_ERROR)
set(CMAKE_TRY_COMPILE_TARGET_TYPE "STATIC_LIBRARY")
SET( CMAKE_CXX_STANDARD 14 )
SET( CMAKE_CXX_STANDARD_REQUIRED ON )
set( CMAKE_EXPORT_COMPILE_COMMANDS ON )
set(CMAKE_CXX_FLAGS_DEBUG "-g")
set(CMAKE_CXX_FLAGS_RELEASE "-O2 -s")
set(CMAKE_CXX_STANDARD_LIBRARIES "-static-libgcc -static-libstdc++")
project (BGMemory VERSION 0.1 LANGUAGES CXX)

IF(CMAKE_BUILD_TYPE MATCHES DEBUG)
    message("debug mode")
    ADD_DEFINITIONS(-DASSERTIONS_ENABLED)
ENDIF(CMAKE_BUILD_TYPE MATCHES DEBUG)

include_directories(include)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

add_subdirectory(bgmemory)